tests/files/codeanalysis/doublesemicolon/Invalid.php
<?php
for(;;);;      //1 error
for(;false;);; //1 error
for( ; ;);;    //1 error

$x=1;;   //error
$y=1; ;  //error
$z=1;
;        //error
